# SupplyChainTracker-solana-

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  GITHUB_ISSUE.md  LICENSE  PLAN-EVOLUTIVO-SISTEMA.md  README.md  ROADMAP.md  VERIFICATIONS.md
.github/: CODEOWNERS  GITHUB_ISSUE.md  GITHUB_ISSUE_RUNBOOK_UNIFICATION.md  PULL_REQUEST_TEMPLATE.md  issue-100-deep-analysis.md  issue-rbac-analysis.md  issue-rbac-consolidation-body.md
ANALYSIS/: ANCHOR-TESTS-ALTERNATIVES.md  PROJECT-STATE-ANALYSIS.md
analysis/: GITHUB-ISSUE-LITESVM-MIGRATION.md  issues-hierarchical-plan.md  litesvm-analysis.md  (+2 more)
sc-solana/programs/sc-solana/: Cargo.toml
sc-solana/programs/sc-solana/src/: lib.rs
sc-solana/programs/sc-solana/src/errors/: mod.rs
sc-solana/programs/sc-solana/src/events/: mod.rs  netbook_events.rs  query_events.rs  role_events.rs
sc-solana/programs/sc-solana/src/instructions/: deployer.rs  initialize.rs  mod.rs
sc-solana/programs/sc-solana/src/instructions/netbook/: assign.rs  audit.rs  mod.rs  register.rs  register_batch.rs  validate.rs
sc-solana/programs/sc-solana/src/instructions/query/: config.rs  mod.rs  netbook_state.rs  role.rs
sc-solana/programs/sc-solana/src/instructions/role/: grant.rs  holder_add.rs  holder_remove.rs  mod.rs  request.rs  revoke.rs  transfer_admin.rs
sc-solana/programs/sc-solana/src/state/: config.rs  mod.rs  netbook.rs  role_holder.rs  role_request.rs  serial_hash_registry.rs
sc-solana/programs/sc-solana/src/utils/: mod.rs
sc-solana/programs/sc-solana/tests/: compute-units.rs  mollusk-lifecycle.rs  mollusk-tests.rs
(+329 files in other folders)
