[package]
name = "sc-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sc_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
sha2 = "0.10"

# Mollusk test dependencies (in-process SVM test harness by Anza)
[dev-dependencies]
mollusk-svm = "0.12.1-agave-4.0"
solana-pubkey = "3.0"
solana-account = "3.0"
solana-instruction = "3.0"
solana-system-interface = "2.0"
solana-sdk-ids = "2.0"
solana-rent = "3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
